@@ -2,6 +2,7 @@ package com.workday.community.aem.core.constants;
 
 import static com.day.cq.commons.jcr.JcrConstants.JCR_CREATED_BY;
 
+import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -42,13 +43,13 @@ public final class GlobalConstants {
   public static final String JCR_CONTENT_PATH = "/jcr:content";
 
   /** The Constant CONTENT_TYPE_MAPPING. */
-  public static final Map<String, String> CONTENT_TYPE_MAPPING = Map.of(
+  public static final Map<String, String> CONTENT_TYPE_MAPPING = Collections.unmodifiableMap(Map.of(
     "/conf/workday-community/settings/wcm/templates/events", "Calendar Event", 
     "/conf/workday-community/settings/wcm/templates/faq", "FAQ",
     "/conf/workday-community/settings/wcm/templates/kits-and-tools", "Kits and Tools", 
     "/conf/workday-community/settings/wcm/templates/reference", "Reference",
     "/conf/workday-community/settings/wcm/templates/troubleshooting", "Troubleshooting"
-  );
+  ));
 
   /** The Constant OKTA_USER_PATH. */
   public static final String OKTA_USER_PATH = "/workdaycommunity/okta";
